# c-cpp-collection

./: .gitignore  .gitmodules  PRODZ-DE_1-Zwischentest3-Benedikt_Galbavy.c  README.md
ALGOS/: assignment1
ALGOS/assignment2/: CMakeLists.txt  doc.md  main.cpp  tree.cpp  tree.h
ALGOS/assignment3/: CMakeLists.txt  Makefile  docs.md  main.cpp
PROZD-OOP/: PRODZ-DE_1-Zwischentest1-Benedikt_Galbavy.c  PRODZ-DE_1-Zwischentest2-Benedikt_Galbavy.c  linked-list.c
PROZD-OOP/deep-miner/: .clang-uml  CMakeLists.txt  README.md
PROZD-OOP/deep-miner/include/: ability.h  bot.h  display.h  drill.h  filter.h  game.h  refinery.h  world.h
PROZD-OOP/deep-miner/src/: ability.cpp  computer.cpp  display.cpp  filter.cpp  game.cpp  pump.cpp  refinery.cpp  world.cpp
PROZD-OOP/fight-club/: CMakeLists.txt  Doxyfile  notes.md
PROZD-OOP/fight-club/include/: _main_header.h  arena.h  cloak.h  dash.h  display.h  fury.h  lang.h  parry.h  parryCharm.h  spell.h  team.h  thorns.h  treeBrain.h
PROZD-OOP/fight-club/src/: arena.cpp  baldur.cpp  charm.cpp  cloak.cpp  cloakCharm.cpp  dash.cpp  display.cpp  enemy.cpp  fireball.cpp  fury.cpp  move.cpp  nail.cpp  needle.cpp  parry.cpp  parryCharm.cpp  team.cpp
deep-miner/: Doxyfile  deep-miner.cpp
deep-miner/include/: computer.h  definitions.h  player.h  pump.h
deep-miner/src/: bot.cpp  drill.cpp  player.cpp
fight-club/: .clang-uml  README.md  fight-club.cpp
fight-club/include/: aoe.h  baldur.h  balloon.h  character.h  charm.h  cloakCharm.h  decision.h  dive.h  enemy.h  fireball.h  focus.h  grub.h  move.h  nail.h  needle.h  player.h  strength.h  treeDumb.h  treeGreed.h  twister.h
fight-club/src/: aoe.cpp  balloon.cpp  character.cpp  dive.cpp  focus.cpp  grub.cpp  player.cpp  spell.cpp  strength.cpp  thorns.cpp  twister.cpp
